# next_a6

./: README.md  pyproject.toml  requirements.txt
SP/: SP.sql
data/db/: Core1.sql  tfm_departamento.sql  tfm_modalidad.sql  tfm_or1.sql  tfm_or2.sql  tfm_planilla.sql  tfm_preguntas.sql  tfm_routines.sql  tfm_titulo.sql
data/interim/: cbi_results.csv  departments.csv  employees.csv  history_operation.csv  history_performance.csv  job_titles.csv  locations.csv  rating.csv
data/processed/: cbi_results.parquet  departments.parquet  employees.parquet  history_operation.parquet  history_performance.parquet  job_titles.parquet  location.parquet  rating.parquet
data/raw/: cbi_respuestas.csv  chatgpt instructions.docx  datos_operativos.csv  factores_psicosociales.csv  planilla.csv  planilla_sin_acentos.csv
data/raw/v1/: banco_ficticio.csv  banco_ficticio.xlsx  cbi.csv  operativos.csv  planilla_empleados_banco_espana.csv  psicosociales.csv
notebooks/: analysis.ipynb  dashboard.ipynb  read_csv.ipynb
notebooks/.ipynb_checkpoints/: analysis-checkpoint.ipynb
reports/: readme.txt
src/tfm/: clean.py  config.py  dashboard.py  features.py  ingest.py  models.py
src/tfm.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
